[package]
name = "lightning-sys"
version = "0.2.1"
authors = ["Peter Elliott <pelliott@ualberta.ca>"]
edition = "2018"
license = "LGPL-3.0-or-later"
description = "GNU lightning bindings for rust"
readme = "README.md"
repository = "https://github.com/petelliott/lightning-sys"
documentation = "https://docs.rs/lightning-sys"

[dependencies]
mashup = "0.1"
libc = "0.2"
lazy_static = "1.4.0"

[build-dependencies]
bindgen = "0.53"
cc = "1.0"
