[package]
name = "lightning-sys"
version = "0.2.2"
authors = ["Peter Elliott <pelliott@ualberta.ca>"]
edition = "2018"
license = "LGPL-3.0-or-later"
description = "GNU lightning bindings for rust"
readme = "README.md"
repository = "https://github.com/petelliott/lightning-sys"
documentation = "https://docs.rs/lightning-sys"

[dependencies]
paste = "0.1.18"
lazy_static = "1.4.0"
tt-call = "1.0"

[build-dependencies]
bindgen = { version = "0.54.1", default-features = false, features = ["runtime"] }
cc = "1.0"

[dev-dependencies]
libc = "0.2"
